--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
                     <button class="next" onclick="changeSlide(1)">Next</button>
                 </div>
             </div>
-    
+    <script>
+     let   index = 1;
+    </script>
 
         </div>
     </main>
